[package]
name = "warp_auto_select"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
csv = "1.3.0"
env_logger = "0.11.5"
log = "0.4.22"
regex = "1.10.6"
reqwest = { version="0.12.7",  features = ["blocking"] }
